--- a/src/main/resources/com/example/javasudoku/Sudoku-Website-Selection.fxml
+++ b/src/main/resources/com/example/javasudoku/Sudoku-Website-Selection.fxml
@@ -7,8 +7,10 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javasudoku.WebsiteSelectionController">
    <children>
-      <ChoiceBox fx:id="websiteChoiceBox" layoutY="171.0" prefHeight="26.0" prefWidth="1280.0" />
+      <ChoiceBox fx:id="websiteChoiceBox" layoutY="170.0" prefHeight="26.0" prefWidth="1280.0" />
       <Label fx:id="selectWebsiteText" alignment="CENTER" layoutX="350.0" layoutY="117.0" prefHeight="17.0" prefWidth="580.0" text="Select Website" textAlignment="RIGHT" />
-      <Button fx:id="confirmationButton" layoutX="557.0" layoutY="271.0" mnemonicParsing="false" onAction="#confirmWebsite" prefWidth="163.0" text="Confirm" />
+      <Button fx:id="confirmationButton" layoutX="557.0" layoutY="270.0" mnemonicParsing="false" prefWidth="163.0" text="Confirm" />
+      <Button fx:id="hardNYT" layoutX="10.0" layoutY="370.0" mnemonicParsing="false" prefWidth="163.0" text="Hard NYT Sudoku" />
+      <Button fx:id="evilWebSudoku" layoutX="10.0" layoutY="470.0" mnemonicParsing="false" prefWidth="163.0" text="Evil WebSudoku" />
    </children>
 </AnchorPane>
